force-app/main/default/objects/JUCustomer_Carte_Status__c/JUCustomer_Carte_Status__c.object-meta.xml
<CustomObject>
    <label>住環境顧客カルテ状況</label>
    <nameField>
        <displayFormat>JU-{00000000}</displayFormat>
        <label>住環境顧客カルテ状況名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>