force-app/main/default/objects/JUCustomer_Carte_Status__c/fields/account__c.field-meta.xml
<CustomField>
    <fullName>account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>住環境顧客カルテ状況 (取引先)</relationshipLabel>
    <relationshipName>accountJU</relationshipName>
    <type>Lookup</type>
</CustomField>