force-app/main/default/objects/JUCustomer_Carte_Status__c/fields/customer_owner_ju__c.field-meta.xml
<CustomField>
    <fullName>customer_owner_ju__c</fullName>
    <label>得意先所有者_JU</label>
    <length>20</length>
    <type>Text</type>
</CustomField>