force-app/main/default/objects/JUCustomer_Carte_Status__c/fields/input_rate__c.field-meta.xml
<CustomField>
    <fullName>input_rate__c</fullName>
    <label>入力率</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>