force-app/main/default/objects/JUCustomer_Carte_Status__c/fields/input_rate_comprehensive__c.field-meta.xml
<CustomField>
    <fullName>input_rate_comprehensive__c</fullName>
    <label>入力率_総合</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>