force-app/main/default/objects/JUCustomer_Carte_Status__c/fields/parent_account__c.field-meta.xml
<CustomField>
    <fullName>parent_account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>親取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>住環境顧客カルテ状況</relationshipLabel>
    <relationshipName>parent_accountJU</relationshipName>
    <type>Lookup</type>
</CustomField>