force-app/main/default/objects/JUCustomer_Carte_Status__c/fields/responsible_division_ju_reort__c.field-meta.xml
<CustomField>
    <fullName>responsible_division_ju_reort__c</fullName>
    <label>担当部署_JU_reort</label>
    <length>36</length>
    <type>Text</type>
</CustomField>